force-app/main/default/objects/Indemnity_Guarantee__x/Indemnity_Guarantee__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>IndemnityGuarantee</externalName>
    <label>Indemnity Guarantee</label>
    <pluralLabel>Indemnity Guarantees</pluralLabel>
</CustomObject>