force-app/main/default/objects/Indemnity_Guarantee__x/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Expiry Date</description>
    <externalDeveloperName>ExpiryDate</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>