force-app/main/default/objects/Indemnity_Guarantee__x/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Limit</description>
    <externalDeveloperName>Limit</externalDeveloperName>
    <label>Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>