force-app/main/default/objects/Indemnity_Guarantee__x/fields/OLL_Type__c.field-meta.xml
<CustomField>
    <fullName>OLL_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Sub Product code</description>
    <externalDeveloperName>OLLType</externalDeveloperName>
    <label>Sub-Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>