force-app/main/default/objects/Indemnity_Guarantee__x/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Date Opened</description>
    <externalDeveloperName>OpenedDate</externalDeveloperName>
    <label>Date Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>