force-app/main/default/objects/Indemnity_Guarantee__x/fields/Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Security provided for this facility</description>
    <externalDeveloperName>SecurityType</externalDeveloperName>
    <inlineHelpText>1. Registered Mortgage 2. Cash Secured 3. Partially Secured 4. Other 97. Incorrect Record 98. Missing Record</inlineHelpText>
    <label>Security Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>