force-app/main/default/objects/Indemnity_Guarantee__x/fields/Undrawn_Balance__c.field-meta.xml
<CustomField>
    <fullName>Undrawn_Balance__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Undrawn Balance</description>
    <externalDeveloperName>UndrawnBalance</externalDeveloperName>
    <label>Undrawn Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>